# RestApi_Shoestore

./: db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
rest_api/: settings.py  urls.py
shoestore_app/: admin.py  apps.py  models.py  urls.py
shoestore_app/migrations/: 0001_initial.py
